--- a/src/Makefile.am.weycoin
+++ b/src/Makefile.am.weycoin
@@ -273,13 +273,13 @@ crypto_libWEYCOIN_crypto_a_SOURCES = \
   crypto/Lyra2RE/blake.c \
   crypto/Lyra2RE/sph_blake.h \
   crypto/Lyra2RE/keccak.c \
-  crypto/Lyra2RE/keccak.h \
+  crypto/Lyra2RE/sph_keccak.h \
   crypto/Lyra2RE/skein.c \
-  crypto/Lyra2RE/skein.h \
+  crypto/Lyra2RE/sph_skein.h \
   crypto/Lyra2RE/cubehash.c \
-  crypto/Lyra2RE/cubehash.h \
+  crypto/Lyra2RE/sph_cubehash.h \
   crypto/Lyra2RE/bmw.c \
-  crypto/Lyra2RE/bmw.h
+  crypto/Lyra2RE/sph_bmw.h
 
 # consensus: shared between all executables that validate any consensus rules.
 libWEYCOIN_consensus_a_CPPFLAGS = $(AM_CPPFLAGS) $(WEYCOIN_INCLUDES)
