--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -266,6 +266,7 @@ crypto_libweycoin_crypto_a_SOURCES = \
   crypto/sha512.cpp \
   crypto/sha512.h \
   crypto/aes_helper.c \
+  crypto/scrypt.h \
   crypto/Lyra2RE/Sponge.h \
   crypto/Lyra2RE/Sponge.c \
   crypto/Lyra2RE/Lyra2.h \
