--- a/src/qt/res/weycoin-qt-res.rc
+++ b/src/qt/res/weycoin-qt-res.rc
@@ -8,7 +8,7 @@ IDI_ICON2 ICON DISCARDABLE "icons/weycoin_testnet.ico"
 #define VER_PRODUCTVERSION_STR STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
 #define VER_FILEVERSION        VER_PRODUCTVERSION
 #define VER_FILEVERSION_STR    VER_PRODUCTVERSION_STR
-#define COPYRIGHT_STR          STRINGIZE(COPYRIGHT_YEAR) " The STRAKS and WeyCoin developers"
+//#define COPYRIGHT_STR          STRINGIZE(COPYRIGHT_YEAR) " The STRAKS and WeyCoin developers"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
